--- a/_config.yml
+++ b/_config.yml
@@ -65,13 +65,13 @@ kramdown:
 collections:
   exhibits:
     output: true
-  qatar: # name of collection
+  CCProject_2021-2022: # name of collection
     output: true # makes sure pages are output as html files
     layout: 'Caribbean_Literature_jpegs_item' # the layout for the pages to use
     metadata:
       source: 'items.csv' # path to the metadata file within `_data`
     images:
-      source: 'raw_images/qatar' # path to the directory of images within `_data`
+      source: 'raw_images/Caribbean_Literature_jpegs' # path to the directory of images within `_data`
 
 # --------------------------------------------------------------
 # SEARCH INDEX SETTINGS
@@ -85,7 +85,7 @@ search:
   main:
     index: '/search/index.json' # file the index will get written to
     collections:
-      qatar:
+      CCProject_2021-2022:
         content: false # whether or not to index page content
         fields: # the metadata fields to index
           - artist
